@@ -21,7 +21,7 @@ include $(ROOTDIR)/Makefile.best_binaries
 DYNLINKDIR=$(ROOTDIR)/otherlibs/dynlink
 UNIXDIR=$(ROOTDIR)/otherlibs/unix
 
-CAMLC=$(BEST_OCAMLC) $(STDLIBFLAGS) -g
+CAMLC=$(BEST_OCAMLC) $(STDLIBFLAGS)
 COMPFLAGS=$(INCLUDES) -absname -w +a-4-9-41-42-44-45-48-70 -warn-error +A \
           -strict-sequence -strict-formats
 LINKFLAGS=-linkall -I $(UNIXDIR) -I $(DYNLINKDIR)
