@@ -67,7 +67,7 @@ COMPFLAGS = \
   -g $(INCLUDES) -absname -w +a-4-9-41-42-44-45-48 -warn-error +A \
   -strict-sequence -strict-formats -bin-annot -principal
 
-LINKFLAGS = -g $(INCLUDES)
+LINKFLAGS = $(INCLUDES)
 
 CMOFILES=\
   odoc_config.cmo \
